# wpr_simulation2_changestoubuntu24.04ltsversions

./: ARCHITECTURE.md  CMakeLists.txt  README.md  package.xml
config/: wpb_home_controller.yaml
demo_cpp/: 9_cv_face_detect.cpp  9_cv_follow.cpp  9_cv_hsv.cpp  9_cv_image.cpp
exercises/: 9_cv_face_detect_class.cpp  9_cv_face_follow.cpp  9_cv_follow_class.cpp  9_cv_hsv_class.cpp  9_cv_image_class.cpp  9_cv_save_file.cpp
launch/: demo_mani_ctrl.launch.py  robocup_home.launch.py  robocup_home_mani.launch.py  spawn_objects.launch.py  spawn_persons.launch.py  spawn_wpb.launch.py  spawn_wpb_head_up.launch.py  spawn_wpb_lidar.launch.py  spawn_wpb_mani.launch.py  spawn_wpb_mobile.launch.py  world.launch.py  wpb_balls.launch.py  wpb_face.launch.py  wpb_mani.launch.py  wpb_objects.launch.py  wpb_simple.launch.py  wpb_table.launch.py
models/: wpb_home.model  wpb_home_head_up.model  wpb_home_lidar.model  wpb_home_mani.model
models/balls/: blue_ball.model  green_ball.model  orange_ball.model  red_ball.model
scripts/: install_for_humble.sh  install_for_jazzy.sh
src/: ensure_controller_active.py  gz_planar_move.py  objects_publisher.cpp  wpb_home_mani_sim.cpp
worlds/: light.world  robocup_home.world  simple.world  table.world  wpb_pose.world  wpb_simple.world
